# twist-popl22

./: .gitattributes  .gitmodules  LICENSE  Makefile  README.md  bench.out  bench.py  check.out  check.py  dune
qpp_stub/: dune  gate.ml  stub.cpp  stub.h  stub.ml  stub_dmat.cpp  stub_dmat.h  stub_dmat.ml
src/: README.md  args.ml  ast.ml  check.ml  check.mli  convert.ml  convert.mli  dune  errors.ml  inst.ml  interp.ml  interp.mli  interp_dmat.ml  interp_dmat.mli  lexer.mll  main.ml  parse_error.ml  parser.mly  sim.ml  sim.mli  sim_dmat.ml  sim_dmat.mli  static.ml  static.mli  typeAliases.ml
tests/bad/: alias-dup.q  alias.q  annot.q  cast.q  cast2.q  discard.q  duplication.q  floating-point-error.q  generic-cast.q  generic-cast2.q  generic-dup.q  generic-entangle.q  generic-multiple.q  generic.q  if.q  let-generic.q  purity-no-tick.q  purity.q  split-generic.q  split.q
tests/basic/: basic.q  bell.q  cast.q  cast2.q  clone.q  convert.q  epair.q  generic-cast.q  generic-inst.q  generic-multiple.q  generic.q  if.q  implicit-measure.q  measure.q  phase.q  phase2.q  phase_split.q  split.q  swap.q  unit.q  valid.q
tests/misc/: mermin-peres.q  stress-fail.q  stress-succeed.q  stress.q  teleport-cast-noCZ.q  teleport-cast.q  teleport-measure-noCZ.q  teleport.q
tests/multiply/: multiply10.q  multiply11.q  multiply12-notinverse.q  multiply12.q  multiply13.q  multiply14.q  multiply15.q  multiply16.q  multiply17.q  multiply18.q  multiply19.q  multiply20.q  multiply21.q  multiply22.q  multiply23.q  multiply24.q  multiply4-notinverse.q  multiply4.q  multiply5.q  multiply6.q  (+3 more)
(+15 files in other folders)
